[tool.poetry]
name = "home-work-19-1"
version = "0.1.0"
description = ""
authors = ["olga voronets <voronets80@gmail.com>"]
readme = "README.md"
#packages = [{include = "home_work_19"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
